--- a/Changes
+++ b/Changes
@@ -127,3 +127,6 @@
 1.04  - 16 Jan 2008
 	critical fixes in core (bugs in cancel_event, any_tail, and wait)
 	add mutex(&) condition
+
+1.05  - 21 Jan 2008
+	fix minor problems with http/1.1 redirects
