--- a/Changes
+++ b/Changes
@@ -130,3 +130,7 @@
 
 1.05  - 21 Jan 2008
 	fix minor problems with http/1.1 redirects
+
+1.06  - 29 Jan 2008
+	add catch(), the predicate-level exception handler
+	rewrite Mutex so that cancelling waiter() works as expected
