--- a/Changes
+++ b/Changes
@@ -134,3 +134,6 @@
 1.06  - 29 Jan 2008
 	add catch(), the predicate-level exception handler
 	rewrite Mutex so that cancelling waiter() works as expected
+
+1.07  - 30 Jan 2008
+	add backtrace() and enhance execution tracing with debug flag "caller"
