--- a/Changes
+++ b/Changes
@@ -137,3 +137,7 @@
 
 1.07  - 30 Jan 2008
 	add backtrace() and enhance execution tracing with debug flag "caller"
+
+1.08  - 31 Jan 2008
+	implement exceptions with throw/catch
+	enhance backtracing and move it out to IO::Lambda::Backtrace
