--- a/Changes
+++ b/Changes
@@ -114,33 +114,38 @@
 1.00  - 18 Dec 2008
 	add higher-order functions: seq, par, mapcar, filter, fold, curry
 
-1.01  - 8 Jan 2008
+1.01  - 8 Jan 2009
 	rename read to readable, write to writable, readwrite to rwx, sleep to timeout.
 
-1.02  - 11 Jan 2008
+1.02  - 11 Jan 2009
 	fix "invalid handle" exceptions caused by bugs in SNMP code
 	implement DBI::prepare and DBI call grouping
 
-1.03  - 15 Jan 2008
+1.03  - 15 Jan 2009
 	add IO::Lambda::Mutex
 
-1.04  - 16 Jan 2008
+1.04  - 16 Jan 2009
 	critical fixes in core (bugs in cancel_event, any_tail, and wait)
 	add mutex(&) condition
 
-1.05  - 21 Jan 2008
+1.05  - 21 Jan 2009
 	fix minor problems with http/1.1 redirects
 
-1.06  - 29 Jan 2008
+1.06  - 29 Jan 2009
 	add catch(), the predicate-level exception handler
 	rewrite Mutex so that cancelling waiter() works as expected
 
-1.07  - 30 Jan 2008
+1.07  - 30 Jan 2009
 	add backtrace() and enhance execution tracing with debug flag "caller"
 
-1.08  - 31 Jan 2008
+1.08  - 31 Jan 2009
 	implement exceptions with throw/catch
 	enhance backtracing and move it out to IO::Lambda::Backtrace
 
-1.09  - 14 Feb 2008
+1.09  - 14 Feb 2009
 	implement finally() for exceptions
+
+1.10  - 21 Apr 2009
+	make catch() survive restartable calls; remove finally() as
+        it gets too complex if it needs to be restartable
+	minor SNMP fixes
